--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "gulp": "^4.0.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
@@ -19,8 +21,10 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@vue/cli-plugin-router": "~5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
