--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@babel/core": "^7.17.5",
     "@vue/cli-plugin-babel": "^5.0.1",
     "gulp": "^4.0.2",
     "vue": "^2.6.14",
@@ -21,6 +22,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-plugin-router": "~5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
